--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Canyon Bike Co — Local Bike Shop in Canyon, TX</title>
   <meta name="description" content="Canyon Bike Co — Expert repairs, affordable tune-ups, and a curated selection of bikes and accessories. Book a service or shop online today." />
   <meta name="keywords" content="bike shop, bike repair, Canyon TX, tune-up, local bike store" />
-  <link rel="canonical" href="https://<YOUR_GITHUB_USERNAME>.github.io/canyon-bike-landing/" />
+  <link rel="canonical" href="https://<albertspencer>.github.io/canyon-bike-landing/" />
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Canyon Bike Co",
-    "url": "https://<YOUR_GITHUB_USERNAME>.github.io/canyon-bike-landing/",
+    "url": "https://<albertspencer>.github.io/canyon-bike-landing/",
     "logo": "https://images.unsplash.com/photo-1508609349937-5ec4ae374ebf?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=example",
     "sameAs": [],
     "address": {
@@ -26,7 +26,7 @@
       "postalCode": "79015",
       "addressCountry": "US"
     },
-    "telephone": "(806) 555-0123",
+    "telephone": "(806) 437-6300",
     "email": "aspencer1@buffs.wtamu.edu"
   }
   </script>
