--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
             <a href="#book" class="btn btn-lg btn-primary mt-3" aria-label="Book a service at Canyon Bike Co">Book a Service</a>
           </div>
           <div class="col-lg-6 text-center">
-            <img src="https://images.unsplash.com/photo-1517935706615-2717063c2225?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&s=example"
-                 class="img-fluid rounded shadow" alt="Mechanic working on a bicycle in a workshop — close up of wheel and hands" />
+           <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&s=example"
+     class="img-fluid rounded shadow" alt="Close-up of a bicycle parked outdoors — road bike frame and wheel" />
+
           </div>
         </div>
       </div>
