--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="#book" class="btn btn-lg btn-primary mt-3" aria-label="Book a service at Canyon Bike Co">Book a Service</a>
           </div>
           <div class="col-lg-6 text-center">
-           <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&s=example"
+           <img src="https://www.santacruzbicycles.com/cdn/shop/files/EDR__3_Loudenvielle_2025_S3R2235.jpg?v=1755889573&width=875"
      class="img-fluid rounded shadow" alt="Close-up of a bicycle parked outdoors — road bike frame and wheel" />
 
           </div>
