--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             <a class="btn btn-outline-primary" href="#contact">Contact</a>
           </div>
           <div class="col-md-6 text-center">
-            <img src="https://images.unsplash.com/photo-1519996524699-8f5d7d3b5c7c?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=example" alt="Friendly bike shop storefront with bikes outside" class="img-fluid rounded shadow">
+          <img src="https://images.unsplash.com/photo-1529429612213-0b9d9d3a9a04?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=example" alt="Exterior of a local bike shop with bikes displayed outside" class="img-fluid rounded shadow">
+
           </div>
         </div>
       </div>
