--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     "@type": "LocalBusiness",
     "name": "Canyon Bike Co",
     "url": "https://<albertspencer>.github.io/canyon-bike-landing/",
-    "logo": "https://images.unsplash.com/photo-1508609349937-5ec4ae374ebf?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=example",
+   <img src="https://images.unsplash.com/photo-1508609349937-5ec4ae374ebf?auto=format&fit=crop&w=120&q=80" alt="Canyon Bike Co logo — stylized bicycle icon" width="48" height="48" class="me-2 rounded">
+
     "sameAs": [],
     "address": {
       "@type": "PostalAddress",
@@ -62,8 +63,9 @@
             <a href="#book" class="btn btn-lg btn-primary mt-3" aria-label="Book a service at Canyon Bike Co">Book a Service</a>
           </div>
           <div class="col-lg-6 text-center">
-       <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&s=example"
+     <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=1000&q=80"
      class="img-fluid rounded shadow" alt="Close-up of a bicycle parked outdoors — road bike frame and wheel" />
+
 
 
           </div>
@@ -104,7 +106,8 @@
             <a class="btn btn-outline-primary" href="#contact">Contact</a>
           </div>
           <div class="col-md-6 text-center">
-       <img src="https://images.unsplash.com/photo-1519996524699-8f5d7d3b5c7c?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=example" alt="Friendly bike shop storefront with bikes outside" class="img-fluid rounded shadow">
+      <img src="https://images.unsplash.com/photo-1529429612213-0b9d9d3a9a04?auto=format&fit=crop&w=800&q=80" alt="Exterior of a local bike shop with bikes displayed outside" class="img-fluid rounded shadow">
+
 
 
           </div>
