--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     "@type": "LocalBusiness",
     "name": "Canyon Bike Co",
     "url": "https://<albertspencer>.github.io/canyon-bike-landing/",
-   <img src="https://images.unsplash.com/photo-1508609349937-5ec4ae374ebf?auto=format&fit=crop&w=120&q=80" alt="Canyon Bike Co logo — stylized bicycle icon" width="48" height="48" class="me-2 rounded">
+  <img src="https://media.istockphoto.com/id/1268356101/vector/bike-icon-vector-logo-design-template-flat-style-trendy.jpg?s=612x612&w=0&k=20&c=owNTrvMMdpQQMcp4EQkIcaH9Jr2xy5KGkTxeULAQRPk="
+     alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
+
 
     "sameAs": [],
     "address": {
@@ -63,8 +65,9 @@
             <a href="#book" class="btn btn-lg btn-primary mt-3" aria-label="Book a service at Canyon Bike Co">Book a Service</a>
           </div>
           <div class="col-lg-6 text-center">
-     <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=1000&q=80"
-     class="img-fluid rounded shadow" alt="Close-up of a bicycle parked outdoors — road bike frame and wheel" />
+   <img src="https://www.santacruzbicycles.com/cdn/shop/files/EDR__3_Loudenvielle_2025_S3R2235.jpg?v=1755889573&width=875"
+     class="img-fluid rounded shadow" alt="Performance road bicycle — close-up profile" />
+
 
 
 
