--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Canyon Bike Co — Local Bike Shop in Canyon, TX</title>
   <meta name="description" content="Canyon Bike Co — Expert repairs, affordable tune-ups, and a curated selection of bikes and accessories. Book a service or shop online today." />
   <meta name="keywords" content="bike shop, bike repair, Canyon TX, tune-up, local bike store" />
-  <link rel="canonical" href="https://<albertspencer>.github.io/canyon-bike-landing/" />
+  <link rel="canonical" href="https://albertspencer.github.io/canyon-bike-landing/" />
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Canyon Bike Co",
-    "url": "https://<albertspencer>.github.io/canyon-bike-landing/",
+    "url": "https://albertspencer.github.io/canyon-bike-landing/",
   <img src="https://media.istockphoto.com/id/1268356101/vector/bike-icon-vector-logo-design-template-flat-style-trendy.jpg?s=612x612&w=0&k=20&c=owNTrvMMdpQQMcp4EQkIcaH9Jr2xy5KGkTxeULAQRPk="
      alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
 
