--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     "@type": "LocalBusiness",
     "name": "Canyon Bike Co",
     "url": "https://albertspencer.github.io/canyon-bike-landing/",
-  <img src="https://media.istockphoto.com/id/1268356101/vector/bike-icon-vector-logo-design-template-flat-style-trendy.jpg?s=612x612&w=0&k=20&c=owNTrvMMdpQQMcp4EQkIcaH9Jr2xy5KGkTxeULAQRPk="
+<img src="logo..jpg" alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
+
      alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
 
 
