--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     "@type": "LocalBusiness",
     "name": "Canyon Bike Co",
     "url": "https://albertspencer.github.io/canyon-bike-landing/",
-<img src="logo..jpg" alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
+    <img src="logo.jpg" alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
+
 
      alt="Canyon Bike Co logo — bicycle icon" width="48" height="48" class="me-2 rounded">
 
