--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="canonical" href="https://albertspencer.github.io/canyon-bike-landing/" />
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="style.css">
+
   <!-- Structured Data (Organization) -->
   <script type="application/ld+json">
   {
