--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <a class="btn btn-outline-primary" href="#contact">Contact</a>
           </div>
           <div class="col-md-6 text-center">
-      <img src="https://images.unsplash.com/photo-1529429612213-0b9d9d3a9a04?auto=format&fit=crop&w=800&q=80" alt="Exterior of a local bike shop with bikes displayed outside" class="img-fluid rounded shadow">
+      <img src="https://media.gettyimages.com/id/1399541274/photo/man-showing-new-bike-to-young-family-in-bikeshop.jpg?s=612x612&w=gi&k=20&c=voQlAeL9tVrJ7nh-5bnhmN4lc3jzKXYQIubTnofOK8k=" alt="Exterior of a local bike shop with bikes displayed outside" class="img-fluid rounded shadow">
           </div>
         </div>
       </div>
